Fix invisible mobile navigation error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body {
   font-size: 15.5px;
   font-weight: 600;
   letter-spacing: 0.2px;
-  /* color:#0f2a44; */
+  color:white;
   opacity: 0.9;
   text-decoration: none;
   display: block;
@@ -484,13 +484,16 @@ footer {
     width: 100%;
     display: none;
     flex-direction: column;
-    width: 100%;
     background: white;
     padding: 12px;
     border-radius: 0 0 10px 10px;
     margin-top: 10px;
     box-shadow: 0 6px 16px rgba(0,0,0,0.1);
     z-index: 100;
+  }
+
+  .nav-links a {
+    color: #0f2a44;
   }
 
   .nav-links.active {
